# ai-news-aggregator

./: .gitignore  README.md  ai-news-aggregator.code-workspace  index.html  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  vite.config.js
app/: aggregator_runner.py  config.py  daily_runner.py  digest_runner.py  email_runner.py  pipeline.py  render_start.py  user_runner.py  web.py
app/agent/: aggregator_agent.py  curator_agent.py  digest_agent.py  email_agent.py  llm_client.py  ranking_agent.py
app/database/: __init__.py  connection.py  create_tables.py  models.py  repository.py
app/profiles/: user_profile.py
app/schemas/: __init__.py  aggregator.py
app/scrapers/: __init__.py  anthropic.py  generic.py  models.py  openai.py  sources.py  youtube.py  youtube_channels.py
app/services/: __init__.py  aggregator_surface.py  auth.py  email.py  llm_status.py  models.py  news_surface.py  payments.py  process_anthropic.py  process_articles.py  process_curator.py  process_digest.py  process_digest_items.py  process_email.py  process_youtube.py  storage.py
app/web_static/: app.js  cancel.html  index.html  styles.css  success.html
docker/: docker-compose.yml  example.env
src/: index.css  main.jsx
